# GuShi-Generate

./: .gitmodules  Data Form.md  README.md  firstSen.py  gushi.py  liribl2j.xfm.txt
data/: Shixuehanying.txt.jian
get_data/: download.py  get_topics.py
seq2seq/: CMakeLists.txt  README.md
seq2seq/src/: CMakeLists.txt  layers.cpp  layers.h  main.cpp  poem_generate.cpp  poem_generate.h  poem_generate_handler.cpp  poem_generate_handler.h  server.cpp  timestat.hpp  typedec.h
